# nix-base32

./: DEVELOPMENT.md  README.md  nix_base32.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/base32/: __init__.py  _version.py  decode.py  encode.py
src/base32/cli/: __init__.py  io.py  ops.py
src/base32/detail/: __init__.py  charset.py  lengths.py  reverse_lookup.py  types.py
tests/: conftest.py  test_encode_decode.py  test_lengths.py  test_literal_type.py  test_reverse_lookup.py  test_types.py
